# blink

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_LICENSES.txt  about.hbs  about.toml  index.html  models.json  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml  release.yml
crates/sd-sys/: Cargo.toml  build.rs  wrapper.h
crates/sd-wrapper/: Cargo.toml  build.rs
crates/sd-wrapper/src/: context.rs  error.rs  ffi_bridge.rs  generation.rs  gpu.rs  lib.rs  progress.rs  types.rs  upscaler.rs  video.rs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: gallery.rs  generation.rs  mod.rs  models.rs  settings.rs  system.rs  upscaler.rs  video.rs
src/components/: AboutDialog.tsx  FirstRunWizard.tsx  Gallery.tsx  ImageCanvas.tsx  InpaintToolbar.tsx  LicenseInfo.tsx  LoraPicker.tsx  MaskCanvas.tsx  ModelBrowser.tsx  ModelCard.tsx  ModelSelector.tsx  ProgressBar.tsx  PromptBar.tsx  SettingsDrawer.tsx  SettingsPanel.tsx  ToggleOption.tsx  UpscaleButton.tsx  VideoMode.tsx
src/lib/: defaults.ts  tauri-api.ts  types.ts
