[package]
name = "blink"
version = "0.2.0"
edition = "2021"
license = "MIT"

[lib]
name = "blink_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
sd-wrapper = { path = "../crates/sd-wrapper" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
hf-hub = { version = "0.4.2", default-features = false, features = ["ureq"] }
sha2 = "0.10"
image = { version = "0.25", features = ["gif"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }

[features]
default = []
metal = ["sd-wrapper/metal"]
cuda = ["sd-wrapper/cuda"]
vulkan = ["sd-wrapper/vulkan"]
