[package]
name = "sd-wrapper"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Safe Rust wrapper around stable-diffusion.cpp via diffusion-rs-sys"

[dependencies]
image = "0.25"
thiserror = "2"
log = "0.4"
sd-sys = { path = "../sd-sys" }
libc = "0.2"
serde = { version = "1", features = ["derive"] }

[features]
default = []
metal = ["sd-sys/metal"]
cuda = ["sd-sys/cuda"]
vulkan = ["sd-sys/vulkan"]
